@@ -1,5 +1,10 @@
 2006-03-07  Danilo Šegan  <danilo@gnome.org>
 
+	* templates/module.tmpl: 
+	* view-module.py (get_stats_for): Added info messages.
+
+2006-03-07  Danilo Šegan  <danilo@gnome.org>
+
 	* database.py:
 	* modules.py:
 	* update-stats.py:
